@startuml
!theme plain
skinparam linetype ortho
skinparam defaultFontName Microsoft YaHei
skinparam defaultFontSize 12

' entities

entity "tb_topic (Topic 主表)" as tb_topic {
  * id : BIGINT <<PK>>
  --
  * topic_code : VARCHAR(64) <<UK>>
  * topic_name : VARCHAR(64)
  parent_id : BIGINT <<FK>>
  * topic_type : TINYINT
  * status : TINYINT
  * sort : INT
  description : VARCHAR(255)
  * create_time : DATETIME
  * update_time : DATETIME
}

entity "tb_note_topic_relation (内容Topic关系)" as tb_note_topic_relation {
  * id : BIGINT <<PK>>
  --
  * note_id : BIGINT <<FK>>
  * topic_id : BIGINT <<FK>>
  * weight : DECIMAL(6,4)
  * source_type : TINYINT
  * create_time : DATETIME
}

entity "tb_record_topic_relation (记录Topic规则)" as tb_record_topic_relation {
  * id : BIGINT <<PK>>
  --
  * mode_type : TINYINT
  * record_item_id : INT
  record_value_pattern : VARCHAR(128)
  * topic_id : BIGINT <<FK>>
  * weight : DECIMAL(6,4)
  * create_time : DATETIME
  * update_time : DATETIME
}

entity "tb_user_feature_snapshot (用户特征快照)" as tb_user_feature_snapshot {
  * id : BIGINT <<PK>>
  --
  * user_id : BIGINT <<UK>>
  base_feature_json : JSON
  behavior_feature_json : JSON
  health_feature_json : JSON
  * generated_at : DATETIME
  * feature_version : INT
  * create_time : DATETIME
  * update_time : DATETIME
}

entity "tb_note_feature (内容特征快照)" as tb_note_feature {
  * id : BIGINT <<PK>>
  --
  * note_id : BIGINT <<UK>>
  * type : TINYINT
  * author_id : BIGINT
  title : VARCHAR(255)
  cover_url : VARCHAR(512)
  channel_id : INT
  * status : TINYINT
  topic_feature_json : JSON
  * quality_score : DECIMAL(10,4)
  * hot_score : DECIMAL(10,4)
  * feature_version : INT
  * create_time : DATETIME
  * update_time : DATETIME
}

entity "tb_user_insight (用户洞察结果)" as tb_user_insight {
  * id : BIGINT <<PK>>
  --
  * user_id : BIGINT <<UK>>
  health_focus_json : JSON
  content_focus_json : JSON
  risk_tags_json : JSON
  recommendation_reasons_json : JSON
  * generated_at : DATETIME
  * insight_version : INT
  * create_time : DATETIME
  * update_time : DATETIME
}

' relationships

tb_topic ||--o{ tb_topic : "parent_id"
tb_topic ||--o{ tb_note_topic_relation : "topic_id"
tb_topic ||--o{ tb_record_topic_relation : "topic_id"
tb_note_feature ||--o{ tb_note_topic_relation : "note_id"

@enduml
